# scrpr

./: CHANGELOG.md  Cargo.toml  README.md  readma.config.ts  release-plz.toml  renovate.json
.github/workflows/: ci.yml  coverage.yml  release.yml
src/: lib.rs
