[package]
name = "scrpr"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = "0.12.8"
rayon = "1.10.0"
thiserror = "1.0.64"
derive_more = { version = "1.0.0", features = ["full"] }
futures = "0.3.31"
scraper = "0.20.0"
url = { version = "2.5.2" }
serde = { version = "1.0.210", features = ["derive"] }
