[package]
name = "scrpr"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "Basic rust scraper and data selector"
authors = ["elcoosp"]
rust-version = "1.81"
documentation = "https://github.com/elcoosp/scrpr"
homepage = "https://github.com/elcoosp/scrpr"
repository = "https://github.com/elcoosp/scrpr"
keywords = ["scraper"]
[dependencies]
reqwest = "0.12.8"
rayon = "1.10.0"
thiserror = "2.0.3"
derive_more = { version = "2.0.0", features = ["full"] }
futures = "0.3.31"
scraper = "0.24.0"
url = { version = "2.5.2" }
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.41.1", features = ["macros"] }
